fix: poster container and copyright notice overlap

--- a/assets/sass/_title_meta.scss
+++ b/assets/sass/_title_meta.scss
@@ -15,11 +15,12 @@
 
 			.titlemeta-poster-container {
 				max-height: 350px;
+				height: 100%;
 
 				img.titlemeta-poster {
+					object-fit: contain;
 					max-width: 100%;
    					max-height: 100%;
-					object-fit: contain;
 				}
 			}
 
